#
# Alpha 0.2 (22/03/2020)
#
# Added _oof as a command
# Addded _crab as a command
# Addded _champion as a command
# The new kick command that is managed by the botcontrollers
# The new ban command that is managed by the admins 
# Fixed a bug that resulted in the bot sending multiple messages to only 1 command
#
# Alpha 0.2.1 (06/07/2020)
# The bot is now 24/7 Online for 22 days a month
#
# Alpha 0.2.2 (O6//07/2020)
#
# Added the _cs command that gives the ability to mentions and tts the team of cs
# Removed the _restart as a command
# Updated the status of the bot
# Reworked the code for jojo and outlander trigger words 
# Optimized the code for all code except the rune random system which will be reworked in the next update
#
# Alpha 0.3 The social update (07/07/2020)
#
# Added the _roast command that serves to keep the bot superiority of the humans
# Added the possibility of engaging on a conversation with the bot when you mention it
# Added the _random command that sorts a number between 1 and 100
# Added the _bored command that the bot gives ideas for the humans to entretain themselfs
# Added the friendship meters to the bot
# Added the possibility of having reminders on the bot (ONLY IN HOURS)  
# Resolved the issue that was blocking the jojo and outlander trigger words to run
# Removed the rune random system from the bot temporary
# Resolved some bugs regarding case sensitive on oof and trigger words